--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,18 @@
 name: CI Pipeline
 
-  on: 
+on: 
     push:
       branches: [ "main" ]
     pull_request:
       branches: [ "main" ]
 
-  jobs:
+jobs:
     build:
       runs-on: ubuntu-latest
 
       steps:
       - name: Checkout Code
-        users: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Set Up JDK 17
         uses: actions/setup-java@v4
@@ -24,9 +24,12 @@ name: CI Pipeline
         uses: actions/cache@v4
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('todoapp-swe451/pom.xml') }}
           restore-keys: | 
             ${{ runner.os }}-maven-
+
+      - name: List Files (debugging)
+        run: ls -R
 
       - name: Build with Maven
         run: mvn clean install
