--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('todoapp-swe451/pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: | 
             ${{ runner.os }}-maven-
 
@@ -32,4 +32,4 @@ jobs:
         run: ls -R
 
       - name: Build with Maven
-        run: mvn clean install
+        run: cd todoapp-swe451; mvn clean install
