--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,16 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('todapp-swe451/pom.xml') }}
           restore-keys: | 
             ${{ runner.os }}-maven-
 
       - name: List Files (debugging)
         run: ls -R
+
+      - name: Run Unit Tests
+        run: mvn test
+        working-directory: ./todoapp-swe451
 
       - name: Build with Maven
         run: mvn clean install
